tests/ui/unnamed_fields.stderr
error: Tuple structs are not supported
 --> tests/ui/unnamed_fields.rs:4:1
  |
4 | struct UnnamedFields(i32, str);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
